syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

import "ZtLiveUserInfo.proto";

message CommonActionSignalComment {
	string content = 1;
	int64 sendTimeMs = 2;
	ZtLiveUserInfo userInfo = 3;
}
