syntax = "proto3";

package AcFunDanmu;

import "ZtLiveActionSignalItem.proto";

message ZtLiveScActionSignal {
	repeated ZtLiveActionSignalItem item = 1;
}